fixes mobile logo gutter left align

--- a/src/client/styles/header/header.scss
+++ b/src/client/styles/header/header.scss
@@ -229,6 +229,7 @@ $primary-color: #0B97DD;
 
     .logo {
         margin: 1em;
+        margin-left: 4.3vw;
         height: 9.6vw;
     }
 
